--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -9,6 +9,8 @@
 .MainStyle {
    padding-top: 60px;
    padding-left: 20px;
+   padding-bottom: 60px;
+   height: "100%";
 }
 
 .center {
@@ -18,4 +20,11 @@
 .LeftBorder30 {
    border-top-left-radius: 30px;
    border-bottom-left-radius: 30px;
+}
+
+.ItemCardImageStyle {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 10px;
 }
