--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Nanum+Gothic&family=Open+Sans:wght@300&family=Raleway:wght@100&display=swap");
+
 .LoginStyle {
    display: flex;
    justify-content: center;
@@ -26,4 +28,24 @@
    height: 95px;
    object-fit: cover;
    border-radius: 10px;
+}
+
+.mainColor {
+   color: #442f51;
+}
+.mainBackColor {
+   background-color: #442f51;
+}
+
+.LoginHeader {
+   font-family: "Montserrat", sans-serif;
+}
+
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Nanum Gothic', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Raleway', sans-serif; */
+
+.Row {
+   display: flex;
 }
