--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -3,6 +3,14 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 /* font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';  */
 
+@font-face {
+  font-family: "KOTRA_BOLD-Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.1/KOTRA_BOLD-Bold.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 p,
 small,
 h1,
@@ -11,6 +19,10 @@ h3,
 h4,
 h5 {
   font-family: "Nanum Gothic", sans-serif;
+}
+
+.font-Spoqa {
+  font-family: "KOTRA_BOLD-Bold";
 }
 
 .LoginStyle {
@@ -88,7 +100,9 @@ h5 {
 
 .FormDivStyle {
   border: 1px solid lightgray;
-  padding: 30px;
+  padding: 30px 0;
+
+  height: 70vh;
 }
 
 .Contract-Key {
@@ -104,4 +118,27 @@ h5 {
   color: black;
 
   margin: 6px auto;
+}
+
+.Account-Bank-Box {
+  background-color: rgb(235, 235, 235);
+  margin: 0 0 30px;
+  padding: 20px 30px 20px;
+}
+
+.Deposit-Cost,
+.Deposit-Name,
+.Deposit-Phone {
+  width: 100%;
+  border-bottom: 1px solid black;
+  padding: 10px 0;
+
+  color: black;
+}
+.Deposit-Button {
+  width: 100%;
+  background-color: blue !important;
+
+  color: white !important;
+  font-size: 1.2rem !important;
 }
